<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtTitle"
        android:textSize="18sp"
        android:textAlignment="center" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Name"
        android:ems="10"
        android:id="@+id/editText" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <Button
        android:text="Ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnOk" />
</LinearLayout>