...
    <string name="action_backup">Backup</string>
    <string name="action_add_attraction">Add Attraction</string>
    <string name="action_add_attractionarea">Add Attraction Area</string>
    <string name="action_add_contact">Add Contact</string>
    <string name="action_add_day">Add Day</string>
    <string name="action_add_flight">Add Flight</string>
    <string name="action_add_holiday">Add Holiday</string>
    <string name="action_add_hotel">Add Hotel</string>
    <string name="action_add_show">Add Show</string>
    <string name="action_add_restaurant">Add Restaurant</string>
    <string name="action_add_budget">Add Budget</string>
    <string name="action_add_bus">Add Bus</string>
    <string name="action_add_cinema">Add Cinema</string>
...
    <string name="bus_arrives">Bus Arrives</string>
    <string name="bus_details">Bus Details</string>
    <string name="checkbox">CheckBox</string>
    <string name="checkbox3">CheckBox</string>
    <string name="description">Desc</string>
    <string name="journey_ends">Journey Ends</string>
    <string name="save">Save</string>
    <string name="attached_file">Attached File</string>

    <string name="schedule_unknown">Unknown</string>
    <string name="schedule_easy">Easy</string>
    <string name="schedule_moderate">Moderate</string>
    <string name="schedule_vbusy">V Busy</string>
...
