...
        <include
            layout="@layout/included_schedule_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/grpHolidayName"
            android:orientation="vertical"
            android:baselineAligned="false"
            android:layout_margin="10dp"
            style="@style/MyBox">

            <TextView
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="saveHoliday"
                android:text="@string/save" />
        </LinearLayout>
...
